[gd_scene load_steps=39 format=3 uid="uid://b43fpm1uymldf"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://mdjfxpdelj3w" path="res://assets/Collapse.png" id="2_nvctb"]
[ext_resource type="Texture2D" uid="uid://dd3n7hy6libl4" path="res://assets/SpriteSheet_P1.png" id="3_qtlic"]
[ext_resource type="Texture2D" uid="uid://bwlrdwotfb8xv" path="res://assets/hero-2-circle.png" id="3_yudyd"]
[ext_resource type="AudioStream" uid="uid://dm4vxiqb7oit5" path="res://assets/121645028-video-game-jump-sound-effect-1.wav" id="4"]
[ext_resource type="Script" path="res://scripts/Orbs.gd" id="4_v8tyi"]
[ext_resource type="AudioStream" uid="uid://grfls847bx6u" path="res://assets/ring_game_death_sound.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://bgkhlkm6fuxo4" path="res://assets/ring_game_fast_fall.wav" id="6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hn5p1"]
atlas = ExtResource("3_qtlic")
region = Rect2(0, 1945, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6m1e"]
atlas = ExtResource("3_qtlic")
region = Rect2(1638, 1945, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2xov"]
atlas = ExtResource("3_qtlic")
region = Rect2(3276, 1945, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqkkx"]
atlas = ExtResource("3_qtlic")
region = Rect2(4914, 1945, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_6a0bp"]
atlas = ExtResource("3_qtlic")
region = Rect2(6552, 1945, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucwh4"]
atlas = ExtResource("3_qtlic")
region = Rect2(8190, 1945, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uenj"]
atlas = ExtResource("3_qtlic")
region = Rect2(9828, 1945, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_bphxl"]
atlas = ExtResource("3_qtlic")
region = Rect2(11466, 1945, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkmkg"]
atlas = ExtResource("3_qtlic")
region = Rect2(4914, 5835, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3vow"]
atlas = ExtResource("3_qtlic")
region = Rect2(4914, 3890, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_atvxa"]
atlas = ExtResource("3_qtlic")
region = Rect2(0, 5835, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qfqd"]
atlas = ExtResource("3_qtlic")
region = Rect2(1638, 5835, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4ygj"]
atlas = ExtResource("3_qtlic")
region = Rect2(3276, 5835, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_87k1q"]
atlas = ExtResource("3_qtlic")
region = Rect2(4914, 5835, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_t30k5"]
atlas = ExtResource("3_qtlic")
region = Rect2(0, 0, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_2586f"]
atlas = ExtResource("3_qtlic")
region = Rect2(1638, 0, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv35a"]
atlas = ExtResource("3_qtlic")
region = Rect2(3276, 0, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7gg1"]
atlas = ExtResource("3_qtlic")
region = Rect2(4914, 0, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlek6"]
atlas = ExtResource("3_qtlic")
region = Rect2(6552, 0, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_a738o"]
atlas = ExtResource("3_qtlic")
region = Rect2(8190, 0, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_t50ej"]
atlas = ExtResource("3_qtlic")
region = Rect2(9828, 0, 1638, 1945)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm51n"]
atlas = ExtResource("3_qtlic")
region = Rect2(11466, 0, 1638, 1945)

[sub_resource type="SpriteFrames" id="12"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_nvctb")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hn5p1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6m1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2xov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqkkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6a0bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucwh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uenj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bphxl")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkmkg")
}],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3vow")
}],
"loop": true,
"name": &"fastfalling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_atvxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qfqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4ygj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87k1q")
}],
"loop": false,
"name": &"jumping",
"speed": 48.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t30k5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2586f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv35a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7gg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlek6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a738o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t50ej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm51n")
}],
"loop": true,
"name": &"running",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="18"]
size = Vector2(26.377, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p7vnx"]
size = Vector2(39, 15)

[sub_resource type="CircleShape2D" id="13"]
radius = 16.0

[sub_resource type="CapsuleShape2D" id="19"]
radius = 18.0
height = 62.0

[sub_resource type="Curve" id="Curve_nrnvk"]
_data = [Vector2(0, 0.0282052), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_b8w18"]
curve = SubResource("Curve_nrnvk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xcvbt"]
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 300.0
initial_velocity_max = 300.0
scale_curve = SubResource("CurveTexture_b8w18")

[node name="Player" type="CharacterBody2D"]
z_index = 3
position = Vector2(540, 540)
collision_layer = 2
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.05, 0.05)
sprite_frames = SubResource("12")
animation = &"jumping"

[node name="CollisionShapeForGround" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
shape = SubResource("18")

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(0, 21.5517)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(3, 2.4483)
shape = SubResource("RectangleShape2D_p7vnx")

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(0, -20)
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1, 5)
shape = SubResource("13")

[node name="Overlap" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Overlap"]
position = Vector2(1.00003, 0)
shape = SubResource("19")

[node name="Orbs" type="Node2D" parent="."]
script = ExtResource("4_v8tyi")

[node name="TeleportInvulnerability" type="Timer" parent="."]

[node name="DeathParticles" type="GPUParticles2D" parent="."]
position = Vector2(0.59845, -18.319)
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_xcvbt")
texture = ExtResource("3_yudyd")
one_shot = true
explosiveness = 1.0

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4")
volume_db = -21.0

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5")

[node name="FastFall" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6")
volume_db = -18.0

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_entered" from="Overlap" to="." method="_on_Overlap_area_entered"]
[connection signal="area_exited" from="Overlap" to="." method="_on_Overlap_area_exited"]
[connection signal="timeout" from="TeleportInvulnerability" to="." method="_on_teleport_invulnerability_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
